fix(sonar): use Stream.toList() instead of collect(Collectors.toList()) (S6204)